jdk17 (#429)
* jdk17

* Обновлен градл и зависимости

* fix for mac + jdk < 20