@@ -36,7 +36,6 @@ import lombok.Value;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Value
 @Builder
@@ -90,6 +89,6 @@ public class IntegrationService implements MDObject, ModuleOwner, ChildrenOwner 
   public List<MD> getChildren() {
     return integrationServiceChannels.stream()
       .map(MD.class::cast)
-      .collect(Collectors.toList());
+      .toList();
   }
 }
