@@ -36,7 +36,6 @@ import lombok.Value;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Value
 @Builder
@@ -86,6 +85,6 @@ public class Sequence implements MDObject, AttributeOwner, ModuleOwner {
   public List<Attribute> getAllAttributes() {
     return dimensions.stream()
       .map(Attribute.class::cast)
-      .collect(Collectors.toList());
+      .toList();
   }
 }
